--- a/deep_learning/2_basic_ann_model.ipynb
+++ b/deep_learning/2_basic_ann_model.ipynb
@@ -850,13 +850,7 @@
       "469/469 [==============================] - 0s 997us/step - loss: 0.3360 - accuracy: 0.8607 - val_loss: 0.3661 - val_accuracy: 0.8537\n",
       "Epoch 56/100\n",
       "469/469 [==============================] - 0s 1ms/step - loss: 0.3360 - accuracy: 0.8605 - val_loss: 0.3662 - val_accuracy: 0.8507\n",
-      "Epoch 57/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 57/100\n",
       "469/469 [==============================] - 0s 1ms/step - loss: 0.3355 - accuracy: 0.8622 - val_loss: 0.3676 - val_accuracy: 0.8533\n",
       "Epoch 58/100\n",
       "469/469 [==============================] - 0s 944us/step - loss: 0.3352 - accuracy: 0.8614 - val_loss: 0.3655 - val_accuracy: 0.8516\n",
@@ -1191,7 +1185,7 @@
     "    ann = Sequential()\n",
     "    ann.add(Dense(units=hp.Int(\"units_\"+str(0), min_value=4, max_value=80, step=4),\n",
     "                  activation=\"relu\",kernel_initializer=\"he_uniform\", input_dim=11))\n",
-    "    ann.add(Dropout(rate=hp.Choice(\"droupout_\"+str(0), [0.1, 0.2, 0.3])))\n",
+    "    ann.add(Dropout(rate=hp.Choice(\"dropout_\"+str(0), [0.1, 0.2, 0.3])))\n",
     "    \n",
     "    #our neural network will have hidden layers between 2 to 20\n",
     "    for i in range(hp.Int(\"num_layers\", 1, 20)):\n",
@@ -2170,7 +2164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
