--- a/nlp_keras/5_fake_news_detection_using_headline.ipynb
+++ b/nlp_keras/5_fake_news_detection_using_headline.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "stunning-associate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +13,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "coordinate-harvest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,9 +22,8 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "determined-namibia",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -133,7 +130,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "lasting-growing",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +150,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "considered-stretch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +159,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "powerful-strip",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +179,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "authorized-lodging",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +189,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dimensional-demographic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +200,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "south-gabriel",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +223,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "going-database",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +233,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "colonial-november",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +242,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "explicit-agency",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +251,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "voluntary-mining",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +267,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cloudy-mortgage",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +287,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "persistent-reduction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +299,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "gentle-taste",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +326,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "infrared-today",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +346,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "crucial-greene",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +385,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "muslim-finance",
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +769,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "wrong-protest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +779,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "electronic-demographic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +788,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "impaired-blame",
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +808,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "surprised-fitting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +817,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "reserved-curtis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +833,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "partial-watts",
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +860,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "bibliographic-terrorism",
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1244,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "signed-spouse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,7 +1253,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "champion-exemption",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,7 +1262,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "numerical-johns",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1301,7 +1272,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ahead-first",
    "metadata": {},
    "outputs": [
     {
@@ -1322,7 +1292,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "recorded-arabic",
    "metadata": {},
    "outputs": [
     {
@@ -1343,7 +1312,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "automotive-volleyball",
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1333,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "super-pittsburgh",
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1353,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "working-drilling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1363,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "green-plane",
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1384,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "matched-current",
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1424,6 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "caroline-accident",
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1464,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lesser-mexico",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1523,7 +1485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
